# chess-bitmaps

./: CMakeLists.txt  README.md  main.cpp  runner.py
Package/Constands/: Night.h  constands.h
Package/Helpers/BitFunctions/: bitFunctions.cpp  bitFunctions.h
Package/Helpers/Display/: display.cpp  display.h
Package/Tools/Board/: board.cpp  board.h
functions/: bitFunctions.cpp  bitFunctions.h  board.cpp  board.h  constands.h  display.cpp  display.h
